Blender crashes when Lock Object Modes off (Overlay engine refactor related ?) #72147

Closed
opened 2019-12-03 17:03:36 +01:00 by Leha · 3 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1060 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.28

Blender Version
Broken: version: 2.82 (sub 3), branch: master (modified), commit date: 2019-12-03 15:20, hash: 574a59dfb0
Worked: 2.81

Short description of error
After opening saved files with Lock Object Modes off Blender crashes on object selection (object should be in Sculpt mode). It worked before Overlay engine refactor

Exact steps for others to reproduce the error

  1. Duplicate default cube
  2. Turn off Lock Object Modes in Edit menu
  3. For one of the cubes switch to the Sculpt mode
  4. Select second cube with Alt+LMB
  5. Save file
  6. Close Blender
  7. Open Blender. Open file
  8. Try to select second cube (Sculpt mode)
  9. Crash

test crash.blend

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1060 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.28 **Blender Version** Broken: version: 2.82 (sub 3), branch: master (modified), commit date: 2019-12-03 15:20, hash: `574a59dfb0` Worked: 2.81 **Short description of error** After opening saved files with Lock Object Modes off Blender crashes on object selection (object should be in Sculpt mode). It worked before Overlay engine refactor **Exact steps for others to reproduce the error** 1. Duplicate default cube 2. Turn off Lock Object Modes in Edit menu 3. For one of the cubes switch to the Sculpt mode 4. Select second cube with Alt+LMB 5. Save file 6. Close Blender 6. Open Blender. Open file 7. Try to select second cube (Sculpt mode) 8. Crash [test crash.blend](https://archive.blender.org/developer/F8187665/test_crash.blend)
Author

Added subscriber: @Leha

Added subscriber: @Leha

This issue was referenced by fda791ab12

This issue was referenced by fda791ab1241534e377bee84b3a214e1343094af

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Clément Foucault self-assigned this 2019-12-03 18:57:13 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72147
No description provided.