Overlay Engine: Fix T72147 Blender crashes when Lock Object Modes off

Also fix sculpt mask inverted