source/blender/draw/engines/overlay/shaders/sculpt_mask_vert.glsl
@@ -11,8 +11,7 @@ void main()
   vec3 world_pos = point_object_to_world(pos);
   gl_Position = point_world_to_ndc(world_pos);
 
-  float mask = 1.0 - (msk * maskOpacity);
-  finalColor = vec4(0.0, 0.0, 0.0, mask);
+  finalColor = vec4(0.0, 0.0, 0.0, msk * maskOpacity);
 
 #ifdef USE_WORLD_CLIP_PLANES
   world_clip_planes_calc_clip_distance(world_pos);
